changes un function1

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <P>
         In this we are going to practice Git commands.
     </P>
+    <p>
+        This changes were made by manish through the function1 branch..
+    </p>
 </body>
 </html>
