--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>GitHub</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>
-            Git practice
+            GitHub 
         </h1>
         <P>
-            In this we are going to practice Git commands.
+            In this we are going to explore GitHub.
         </P>
         
     </body>
