--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>
             Git practice
+            Demo page
         </h1>
         <P>
             In this we are going to practice Git commands.
