--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             In this we are going to explore GitHub.
         </P>
         
+        <a href="https://education.github.com/git-cheat-sheet-education.pdf">For all GitHub Commands</a>
     </body>
 </html>
