--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         </P>
         
         <a href="https://education.github.com/git-cheat-sheet-education.pdf">For all GitHub Commands</a>
+
+        <p id="Thank">Thank You</p>
     </body>
 </html>
